# gumazon

./: .gitignore  .travis.yml  HISTORY.rst  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  envar.json  gumazon.sqlite  gumazon.yaml  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: check.yml
gumazon/: __init__.py  __main__.py  gumazon.py
gumazon/api/: controller.py  model.py  view.py
gumazon/api/models/: dbadaptor.py  product.py  user.py
gumazon/application/: controller.py
gumazon/bootstrap/: __init__.py  db_base.py  db_session.py
gumazon/multiLanguageStrings/: model.py  view.py
gumazon/tests/: test_gumazon.py
settings/: repo.config.yaml
tests/: test_main.py
