[tool.poetry]
name = "gumazon"
version = "0.1.0"
description = ""
authors = ["Gumshoe Media Inc. <gumshoe.media.inc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.31"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pytest-cov = "^3.0.0"
python-semantic-release = "^7.24.0"
pytest-subprocess = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
